package dataControllerUtils.protobuf;

message ADESDBQuery {
    extensions 8 to 108;

    enum  METHOD
    {
        RETRIEVE_CATALOGS                = 0;
        RETRIEVE_CATALOG_ITEMS           = 1;
        RETRIEVE_CATALOG_ITEM_COMOBJECT  = 2;
        RETRIEVE_CATALOG_ITEM_FIELD_UNIT = 3;
        RETRIEVE_CATALOG_ITEM_EXISTS     = 4;
        RETRIEVE_SATELLITE_ITEMS         = 5;
        RETRIEVE_CATALOG_ITEM_STRUCTURE  = 6;
    }
    required METHOD method = 1;
    optional uint32 sessionId = 2;
    optional uint32 domainId = 3;
    optional string catalogName = 4;
// mandatory except for RETRIEVE_CATALOGS
    optional string catalogItemName = 5;
// mandatory except for RETRIEVE_CATALOGS and RETRIEVE_CATALOG_ITEMS
    optional string comObject = 6;
// mandatory for RETRIEVE_CATALOG_ITEM_FIELD_UNIT
// and RETRIEVE_CATALOG_ITEM_EXISTS
    optional string fieldName = 7;
// mandatory for RETRIEVE_CATALOG_ITEM_FIELD_UNIT
}
